@@ -274,7 +274,7 @@ let set_paths () =
       [expand "+camlp4"];
     ]
   in
-  Load_path.init load_path;
+  Load_path.init ~auto_include:Compmisc.auto_include load_path;
   Dll.add_path load_path
 
 let update_search_path_from_env () =
